Modificados dados dos comentários

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Elizabete",
         "Enzo",
+        "Fabianna",
         "showfulscreencontrol",
         "vmplayer",
         "youtube"
