Adicionada a seção de garantia

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "dgnx",
         "Elizabete",
         "Enzo",
         "Fabianna",
+        "gwhtirmros",
+        "pgjxr",
         "showfulscreencontrol",
         "vmplayer",
         "youtube"
