Adicionada a seção de garantia

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "botao",
         "dgnx",
         "Elizabete",
         "Enzo",
         "Fabianna",
+        "formulario",
+        "formularios",
         "gwhtirmros",
         "pgjxr",
         "showfulscreencontrol",
